--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ footer {
     .hero-content,
     .about-content,
     .hero-image,
-    .about-image {
+    .about-image .contact-form-container{
         max-width: 100%;
         margin-bottom: 30px;
     }
@@ -322,7 +322,7 @@ footer {
 }
 
 .form-button {
-    width: 100%;
+    /* width: 100%; */
     border: none;
     cursor: pointer;
     margin-top: 20px;
